--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -288,7 +288,7 @@ a {
    
   }
 }
-@media (max-width:425px){
+@media (max-width:430px){
 
   .carousel {
     display: flex;
@@ -310,33 +310,37 @@ a {
     width: 100%;
     max-width: 350px; /* Largura máxima do carrossel */
     margin: auto;
-    gap: 3rem;
+    gap: 4rem;
     margin-left: 2rem;
     
   }
+  .carousel>img:nth-child(1){
+    left: 1rem;
+    width: 370px;
+  }
   .carousel>img:nth-child(2){
-    left:-4rem;
-    width: 400px;
+    left:-0.4rem;
+    width: 370px;
   }
   .carousel>img:nth-child(3){
-    left: -6rem;
-    width: 400px;
+    left: -3.3rem;
+    width: 370px;
   }
   .carousel>img:nth-child(4){
-    left: -9rem;
-    width: 400px;
+    left: -6rem;
+    width: 370px;
   }
   .carousel>img:nth-child(5){
-    left: -12rem;
-    width: 400px;
+    left: -8.3rem;
+    width: 370px;
   }
   .carousel>img:nth-child(6){
-    left: -4rem;
-    width: 400px;
+    left: -9rem;
+    width: 370px;
   }
   .carousel img {
     position: relative;
-    width: 400px;
+    width: 370px;
     flex-shrink: 0;
     transition: transform 0.5s ease;
   }
@@ -357,29 +361,52 @@ a {
   }
 }
 @media (max-width:393px){
+  .carousel {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    max-width: 400px; /* Largura máxima do carrossel */
+    margin: auto;
+    gap: 2rem;
+    margin-left: 2rem;
+    
+  }
+
+  .carousel>img:nth-child(1){
+    left: -3rem;
+    width: 370px;
+  }
   .carousel>img:nth-child(2){
-    left: -3.5rem;
-    width: 400px;
+    left: -2.4rem;
+    width: 370px;
   }
   .carousel>img:nth-child(3){
-    left: -7.3rem;
-    width: 350px;
+    left: -2.5rem;
+    width: 370px;
   }
   .carousel>img:nth-child(4){
-    left: -8.3rem;
-    width: 350px;
+    left: -2.6rem;
+    width: 370px;
   }
   .carousel>img:nth-child(5){
-    left: -8rem;
-    width: 350px;
+    left: -2.8rem;
+    width: 370px;
   }
   .carousel>img:nth-child(6){
-    left: -8rem;
-    width: 350px;
+    left: -3.2rem;
+    width: 370px;
   }
   #credits>p{
     font-weight: 600;
     font-size: 0.6rem;
+  }
+  .buttons {
+    position: relative;
+    display: flex;
+    top: -8rem;
+    gap: 22rem;
+    text-align: center;
+   
   }
 }
 
@@ -398,26 +425,24 @@ a {
     font-weight: 600;
     font-size: 0.6rem;
   }
+  .buttons {
+    position: relative;
+    display: flex;
+    top: -8rem;
+    gap: 20rem;
+    text-align: center;
+   
+  }
+  .carousel>img:nth-child(5){
+    left: -3.5rem;
+    width: 370px;
+  }
+  .carousel>img:nth-child(6){
+    left: -4.5rem;
+    width: 370px;
+  }
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 @media (max-width:321px){
@@ -432,25 +457,27 @@ a {
     
   }
   .carousel>img:nth-child(2){
-    left: 1rem;
-    width: 400px;
+    left: -1rem;
+    width: 370px;
   }
   .carousel>img:nth-child(3){
-    left: 1rem;
-    width: 350px;
+    left: -2rem;
+    width: 370px;
   }
   .carousel>img:nth-child(4){
-    left: 1rem;
-    width: 350px;
+    left: -3rem;
+    width: 370px;
   }
   .carousel>img:nth-child(5){
-    left: 1rem;
-    width: 350px;
+    left: -4rem;
+    width: 370px;
   }
   .carousel>img:nth-child(6){
-    left: 1rem;
-    width: 350px;
+    left: -5rem;
+    width: 370px;
   }
+
+
  
   #fotos-posada >div>p{
     text-align: center;
@@ -470,7 +497,7 @@ a {
     position: relative;
     display: flex;
     top: -8rem;
-    gap: 15rem;
+    gap: 17rem;
     text-align: center;
    
   }
@@ -481,6 +508,7 @@ a {
     color: #ffffff;
   
   }
+  
   footer{
     display: flex;
    flex-wrap: wrap;
