--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ nav {
 /* Botão do WhatsApp */
 #whatsapp-btn {
   background-color: transparent;
-  color: #0ac84f;
+  color: #05ba47;
   padding: 5px 10px;
   border: none;
   border-radius: 5rem;
