--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,13 @@ nav {
   width: 100%;
   height: 100vh;
 }
+#vilasal-Inicio{
+  background: url(/assets/img/vila-fundo.jpg) no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+
+}
 #Sobre>div>h1{
 display: flex;
 justify-content: center;
@@ -236,6 +243,7 @@ span{
 }
 
 /*Estilos para o carrossel de imagens*/
+#fotos-Deluxe,#fotos-Standard,
 #fotos-posada{
   display: flex;
   flex-direction: column;
@@ -276,7 +284,22 @@ span{
   text-align: center;
  
 }
+#fotos-Standard>.buttons {
+  position: relative;
+  display: flex;
+  top: -10rem;
+  gap: 5rem;
+  text-align: center;
+ 
+}
 
+.buttons> button{
+  background: transparent;
+  border: none;
+  font-size: 2rem;
+  color: #ffffff;
+
+}
 .buttons> button{
   background: transparent;
   border: none;
@@ -461,6 +484,7 @@ footer>#Contato{
   text-align: center;
  
 }
+.btn-quarto>a>button,
 #sobre-acomodaçoes>div>.sub-button>a>button{
   width: 10rem;
   position: relative;
@@ -470,4 +494,53 @@ footer>#Contato{
   border-radius: 0.4rem;
   background-color: #7a5e46;
   color: #fff;
+}
+
+
+#vilasal-Inicio{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.colum-text{
+  margin-top: 1.3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  position: relative;
+  left: 1rem;
+  color: #4e4e4e;
+}
+#vilasal-quartos{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  color: #4e4e4e;
+
+}
+.quartos>#Standard>h3,
+.quartos>#Deluxe>h3{
+  font-size: 1.6rem;
+}
+
+
+.instru{
+  display: grid;
+  text-align: center;
+  margin-bottom: 4rem;
+
+}
+.instru>h2{
+  font-size: 1.8rem;
+}
+.quartos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8rem;
 }
