--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,13 +300,7 @@ span{
   color: #ffffff;
 
 }
-.buttons> button{
-  background: transparent;
-  border: none;
-  font-size: 2rem;
-  color: #ffffff;
 
-}
 #fotos-posada>div>a>button{
   width: 10rem;
   position: relative;
@@ -533,6 +527,7 @@ footer>#Contato{
   display: grid;
   text-align: center;
   margin-bottom: 4rem;
+  font-size: 1.4rem;
 
 }
 .instru>h2{
@@ -540,6 +535,7 @@ footer>#Contato{
 }
 .quartos{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 8rem;
